fixed overflow scroll

--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,6 +1,6 @@
 .full-page{
-    width: 100vw;
-    height: 92vh;
+    height: calc(100vh - 64px);
+    position: relative;
 }
 .splash-image {
     background-image: url("../../assets/images/couple.jpg");
@@ -8,16 +8,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(3px);
-    height: 92vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     position: absolute;
     z-index: -1;
 }
 .gradient{
-    display: flex;
+    /*display: flex;*/
     background: linear-gradient(45deg, rgba(41,147,225,.8), rgba(157,197,246,.6));
-    height: 92vh;
-    width: 100vw;
+    height: 100%;
 }
 
 .home-btn {
