--- a/client/src/components/summary-page/summaryPage.css
+++ b/client/src/components/summary-page/summaryPage.css
@@ -1,12 +1,7 @@
 html{
     font-size: 62.5%;
 }
-body{
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    overflow: scroll;
-}
+
 div>i.nav-icon-size{
     font-size: 5.6rem;
 }
